fix overlapping content with user invitation form

--- a/src/components/forms/user-invitation/user-invitation.scss
+++ b/src/components/forms/user-invitation/user-invitation.scss
@@ -10,6 +10,10 @@
   margin: auto;
 }
 
+.user-invitation .form-group .ui.input {
+  width: 90%;
+}
+
 .user-invitation .kt-textarea__wrapper textarea {
  min-height: 80px !important;
 }
@@ -18,3 +22,4 @@
   // font-weight: 600;
   color: var(--kt-black);
 }
+
